--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@things-scene/github",
   "description": "github component for things-scene",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "things-scene": true,
   "main": "src/index.js",
   "module": "dist/things-scene-github.mjs",
@@ -19,13 +19,13 @@
   "devDependencies": {
     "@things-factory/board-app": "*",
     "@things-factory/board-test": "*",
+    "@things-scene/data-transform": "*",
     "@things-scene/form": "*",
     "@things-scene/grist": "*",
+    "@things-scene/label": "*",
     "@things-scene/restful": "*"
   },
   "dependencies": {
-    "@hatiolab/things-scene": "*",
-    "@things-scene/grist": "^0.1.18",
-    "@things-scene/label": "^0.1.5"
+    "@hatiolab/things-scene": "*"
   }
 }
